results/logs/error_log/task_BigCodeBench_258_error.log
refcode测试失败，BigCodeBench/258的依赖{'datetime': '5.5', 'python': '3.12', 'pytz': '2024.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 24
    </end>
    ^
SyntaxError: invalid syntax

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.

refcode测试失败，BigCodeBench/258的依赖{'datetime': '5.5', 'python': '3.12', 'pytz': '2024.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.
stderr:
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 18, in <module>
    utc_time = datetime(2023, 6, 15, 12, 0, 0, tzinfo=pytz.UTC)
                                                      ^^^^
NameError: name 'pytz' is not defined

stdout:

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.

refcode测试失败，BigCodeBench/258的依赖{'datetime': '5.5', 'python': '3.12', 'pytz': '2024.1'}需要适配
错误信息:
Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.
stderr:
FF.FF
======================================================================
FAIL: test_case_1 (test_1_0.TestCases.test_case_1)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 44, in test_case_1
    self.assertEqual(person_data['timestamp'], '2023-06-15T12:00:00+00:00')
AssertionError: '2023-06-15T12:00:00' != '2023-06-15T12:00:00+00:00'
- 2023-06-15T12:00:00
+ 2023-06-15T12:00:00+00:00
?                    ++++++


======================================================================
FAIL: test_case_2 (test_1_0.TestCases.test_case_2)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 56, in test_case_2
    self.assertEqual(person_data['timestamp'], '2022-05-10T10:30:00+00:00')
AssertionError: '2022-05-10T10:30:00' != '2022-05-10T10:30:00+00:00'
- 2022-05-10T10:30:00
+ 2022-05-10T10:30:00+00:00
?                    ++++++


======================================================================
FAIL: test_case_4 (test_1_0.TestCases.test_case_4)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 84, in test_case_4
    self.assertEqual(person_data['timestamp'], '2021-01-01T00:00:00+00:00')
AssertionError: '2021-01-01T00:00:00' != '2021-01-01T00:00:00+00:00'
- 2021-01-01T00:00:00
+ 2021-01-01T00:00:00+00:00
?                    ++++++


======================================================================
FAIL: test_case_5 (test_1_0.TestCases.test_case_5)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/test_1_0.py", line 100, in test_case_5
    self.assertEqual(person_data['timestamp'], '2020-02-29T15:45:00+00:00')
AssertionError: '2020-02-29T15:45:00' != '2020-02-29T15:45:00+00:00'
- 2020-02-29T15:45:00
+ 2020-02-29T15:45:00+00:00
?                    ++++++


----------------------------------------------------------------------
Ran 5 tests in 0.002s

FAILED (failures=4)

stdout:
David
40

Traceback:
 Traceback (most recent call last):
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 92, in passTaskTest
    result = run_tests_in_virtualenv(venv_dir, test_file_path,outputTestInfo=outputTestInfo)
  File "/home/chenrongyi/codes/VersiBCB_Benchmark/utils/testPassBCB.py", line 33, in run_tests_in_virtualenv
    raise subprocess.CalledProcessError(
subprocess.CalledProcessError: Command '['/datanfs2/chenrongyi/conda_env/datetime5.5_python3.12_pytz2024.1/bin/python', '-m', 'unittest', 'test_1_0.py']' returned non-zero exit status 1.

